made queryObject, passing one from Splash to displayMult and wrote structure to plug in firebase functionality

--- a/app/src/main/res/navigation/home_child_navigation.xml
+++ b/app/src/main/res/navigation/home_child_navigation.xml
@@ -25,5 +25,10 @@
     <fragment
         android:id="@+id/fragment_splash"
         android:name="cs160.final_proj_drawer.ui.home.SplashFragment"
-        tools:layout="@layout/fragment_splash" />
+        tools:layout="@layout/fragment_splash" >
+        <argument
+            android:name="searchQueryObject"
+            app:argType="cs160.final_proj_drawer.logic.SearchQueryObject"
+            app:nullable="true" />
+    </fragment>
 </navigation>
