--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -65,7 +65,12 @@
     <fragment
         android:id="@+id/fragment_display_itins"
         android:name="cs160.final_proj_drawer.ui.itin.DisplayMultItinsFragment"
-        tools:layout="@layout/fragment_display_itins" />
+        tools:layout="@layout/fragment_display_itins" >
+
+        <argument
+            android:name="searchQuery"
+            app:argType="cs160.final_proj_drawer.logic.SearchQueryObject" />
+    </fragment>
 
     <fragment
         android:id="@+id/fragment_display_single_itin"
