--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,25 @@
 
 
     <!-- put a drawable here with our icon :) -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/filled_triangle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_triangle_filled"
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:id="@+id/outlint_triangle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="50dp"
+            app:srcCompat="@drawable/ic_triangle_outline"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -64,7 +83,6 @@
             android:layout_width="@android:dimen/app_icon_size"
             android:layout_height="@android:dimen/app_icon_size"
             android:background="@drawable/searchview_rounded"
-            android:onClick="createTestItinerary"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
             android:paddingRight="5dp"
