--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,28 +11,31 @@
     <!-- put a drawable here with our icon :) -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/largePadding"
+        >
 
         <ImageView
             android:id="@+id/filled_triangle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/login_triangle_big"
+            android:layout_height="@dimen/login_triangle_big"
             app:srcCompat="@drawable/ic_triangle_filled"
             android:layout_centerHorizontal="true"/>
 
         <ImageView
-            android:id="@+id/outlint_triangle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="50dp"
-            app:srcCompat="@drawable/ic_triangle_outline"
-            android:layout_centerHorizontal="true" />
+            android:id="@+id/outline_triangle"
+            android:layout_width="@dimen/login_triangle_small"
+            android:layout_height="@dimen/login_triangle_small"
+            android:layout_marginTop="@dimen/login_triangle_small_top_shift"
+            android:layout_marginStart="@dimen/login_triangle_small_right_shift"
+            app:srcCompat="@drawable/ic_triangle_outline"/>
     </RelativeLayout>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/largePadding"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:fontFamily="@font/primary"
         android:text="Travelr"
         android:textAlignment="center"
