--- a/app/src/main/res/drawable/ic_triangle_outline.xml
+++ b/app/src/main/res/drawable/ic_triangle_outline.xml
@@ -2,5 +2,5 @@
     android:viewportWidth="640" android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillAlpha="0" android:fillColor="#FF000000"
         android:pathData="M271.07,436.22L50.96,573.64L50.96,298.79L50.96,23.96L271.07,161.36L491.18,298.79L271.07,436.22Z"
-        android:strokeAlpha="1" android:strokeColor="#c000ff" android:strokeWidth="5"/>
+        android:strokeAlpha="1" android:strokeColor="@color/colorTriangleSmall" android:strokeWidth="5"/>
 </vector>
