--- a/app/src/main/res/navigation/home_child_navigation.xml
+++ b/app/src/main/res/navigation/home_child_navigation.xml
@@ -14,13 +14,8 @@
         android:name="cs160.final_proj_drawer.ui.home.FilterFragment"
         tools:layout="@layout/fragment_filter" >
         <argument
-            android:name="location"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
-            android:name="initialTagQuery"
-            app:argType="string"
-            app:nullable="true" />
+            android:name="searchQueryObject"
+            app:argType="cs160.final_proj_drawer.logic.SearchQueryObject" />
     </fragment>
     <fragment
         android:id="@+id/fragment_splash"
