fixed image scaling issues in reviewitin

--- a/app/src/main/res/layout/fragment_review_itinerary.xml
+++ b/app/src/main/res/layout/fragment_review_itinerary.xml
@@ -29,8 +29,10 @@
 
         <ImageView
             android:id="@+id/coverPhoto"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             tools:srcCompat="@drawable/sceniclookouts" />
 
         <RelativeLayout
