--- a/app/src/main/res/layout/card_itinerary.xml
+++ b/app/src/main/res/layout/card_itinerary.xml
@@ -47,6 +47,8 @@
             android:layout_alignEnd="@+id/cover_img"
             android:layout_marginRight="@dimen/card_icon_margin_right"
             android:layout_marginBottom="@dimen/card_thumb_margin_bottom"
+            android:scaleX="1"
+            android:scaleY="1"
             android:src="@drawable/like" />
 
 
