--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -17,12 +17,12 @@
         android:id="@+id/home_intro"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/fun_text_box_height"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:fontFamily="@font/primary"
         android:text="@string/home_intro"
         android:textColor="@color/colorFunText"
-        android:textSize="@dimen/fun_text"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-       />
+        android:textSize="@dimen/fun_text" />
 
     <fragment
         android:id="@+id/display_home_itins"
