--- a/app/src/main/res/layout/card_itinerary.xml
+++ b/app/src/main/res/layout/card_itinerary.xml
@@ -40,42 +40,129 @@
             android:textSize="@dimen/card_text"/>
 
         <ImageView
-            android:id="@+id/like"
-            android:layout_width="@dimen/card_icons"
-            android:layout_height="@dimen/card_icons"
-            android:layout_alignBottom="@+id/cover_img"
-            android:layout_alignEnd="@+id/cover_img"
-            android:layout_marginRight="@dimen/card_icon_margin_right"
-            android:layout_marginBottom="@dimen/card_thumb_margin_bottom"
-            android:scaleX="1"
-            android:scaleY="1"
-            android:src="@drawable/like" />
-
-
-        <ImageView
             android:id="@+id/bkmark"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_alignRight="@+id/like"
+            android:layout_alignRight="@+id/hello"
             android:layout_marginRight="@dimen/card_icon_margin_right"
             android:layout_marginTop="@dimen/card_bkmk_margin_top"
             android:src="@drawable/ic_bkmark" />
 
-
-
-        <TextView
-            android:id="@+id/numLikes"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/hello"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/like"
-            android:layout_alignLeft="@+id/like"
-            android:layout_alignBottom="@+id/cover_img"
-            android:gravity="center"
-            android:layout_marginRight="@dimen/card_numLikes_margin_right"
-            android:text="100"
-            android:fontFamily="@font/primary"
-            android:textColor="@color/colorBg"
-            android:textSize="@dimen/card_numLikes_textSize"/>
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="101dp"
+            android:layout_marginEnd="0dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/like"
+                android:layout_width="@dimen/card_icons"
+                android:layout_height="@dimen/card_icons"
+                android:layout_alignEnd="@+id/cover_img"
+                android:layout_alignBottom="@+id/cover_img"
+                android:layout_gravity="right"
+                android:layout_marginRight="@dimen/card_icon_margin_right"
+                android:layout_marginBottom="0dp"
+                android:scaleX="1"
+                android:scaleY="1"
+                android:src="@drawable/like" />
+
+            <TextView
+                android:id="@+id/numLikes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/like"
+                android:layout_alignRight="@+id/like"
+                android:layout_alignBottom="@+id/cover_img"
+                android:layout_gravity="right"
+                android:layout_marginRight="@dimen/card_numLikes_margin_right"
+                android:fontFamily="@font/primary"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text="100"
+                android:textColor="@color/colorBg"
+                android:textSize="@dimen/card_numLikes_textSize" />
+        </LinearLayout>
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
+
+<!--<RelativeLayout-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent"-->
+<!--android:orientation="horizontal">-->
+
+<!--<ImageView-->
+<!--    android:id="@+id/cover_img"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="@dimen/cardItinSize"-->
+<!--    android:layout_alignParentLeft="true"-->
+<!--    android:layout_alignParentStart="true"-->
+<!--    android:layout_alignParentTop="true"-->
+<!--    android:scaleType="fitXY"-->
+<!--    android:src="@drawable/sceniclookouts" />-->
+
+
+<!--<TextView-->
+<!--    android:id="@+id/text"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_alignParentLeft="true"-->
+<!--    android:layout_alignParentBottom="true"-->
+<!--    android:layout_marginBottom="0dp"-->
+<!--    android:layout_marginLeft="@dimen/cardTextPadding"-->
+<!--    android:text="text"-->
+<!--    android:fontFamily="@font/primary"-->
+<!--    android:textColor="@color/colorBg"-->
+<!--    android:textSize="@dimen/card_text"/>-->
+
+<!--<ImageView-->
+<!--    android:id="@+id/bkmark"-->
+<!--    android:layout_width="25dp"-->
+<!--    android:layout_height="25dp"-->
+<!--    android:layout_alignRight="@+id/hello"-->
+<!--    android:layout_marginRight="@dimen/card_icon_margin_right"-->
+<!--    android:layout_marginTop="@dimen/card_bkmk_margin_top"-->
+<!--    android:src="@drawable/ic_bkmark" />-->
+
+<!--<RelativeLayout-->
+<!--    android:id="@+id/hello"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_alignParentEnd="true"-->
+<!--    android:layout_marginTop="44dp"-->
+<!--    android:layout_marginEnd="0dp"-->
+<!--    android:gravity="right">-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/like"-->
+<!--        android:layout_width="@dimen/card_icons"-->
+<!--        android:layout_height="@dimen/card_icons"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:layout_marginRight="@dimen/card_icon_margin_right"-->
+<!--        android:layout_marginBottom="@dimen/card_thumb_margin_bottom"-->
+<!--        android:scaleX="1"-->
+<!--        android:scaleY="1"-->
+<!--        android:src="@drawable/like" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/numLikes"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/like"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:layout_gravity="center_vertical"-->
+<!--        android:layout_marginTop="-6dp"-->
+<!--        android:fontFamily="@font/primary"-->
+<!--        android:gravity="center"-->
+<!--        android:text="100"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="@color/colorBg"-->
+<!--        android:textSize="@dimen/card_numLikes_textSize" />-->
+<!--</RelativeLayout>-->
+
+<!--</RelativeLayout>-->
