--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,14 +12,22 @@
         android:layout_height="120dp"
         android:paddingBottom="@dimen/activity_vertical_margin">
 
+
+        <androidx.cardview.widget.CardView
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/profile_image_card"
+            app:cardCornerRadius="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/profile_image"
             android:layout_width="@dimen/profile_img_size"
             android:layout_height="@dimen/profile_img_size"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@mipmap/ic_launcher" />
 
+            android:background="@drawable/jordan_profile_pic"
+            />
+        </androidx.cardview.widget.CardView>
         <TextView
             android:id="@+id/profile_name"
             android:layout_width="200dp"
@@ -30,7 +38,7 @@
             android:textColor="@color/colorFunText"
             android:fontFamily="@font/primary"
             app:layout_constraintBottom_toTopOf="@+id/profile_location"
-            app:layout_constraintStart_toEndOf="@+id/profile_image" />
+            app:layout_constraintStart_toEndOf="@+id/profile_image_card" />
 
         <TextView
             android:id="@+id/profile_location"
@@ -40,7 +48,7 @@
             android:text="@string/profile_location"
             android:fontFamily="@font/primary"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/profile_image"/>
+            app:layout_constraintStart_toEndOf="@+id/profile_image_card"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
