--- a/app/src/main/res/layout/card_horiz.xml
+++ b/app/src/main/res/layout/card_horiz.xml
@@ -40,6 +40,8 @@
             android:layout_alignParentRight="true"
             android:layout_alignBottom="@+id/bg_img"
             android:text="text"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:paddingRight="@dimen/cardTextPadding"
             android:textColor="@color/colorBg"
             android:fontFamily="@font/primary_thin"
